Fix network filterbar text alignment
When user changed devtool language, such as Chinese,
there will be Chinese and English items in network filterbar,
filterbar items misaligned since different font.
Set line-height fix this.

Bug: 1287058
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3386198
Commit-Queue: Changhao Han <changhaohan@chromium.org>

--- a/front_end/ui/legacy/filter.css
+++ b/front_end/ui/legacy/filter.css
@@ -65,6 +65,7 @@
   border-radius: 6px;
   overflow: hidden;
   cursor: pointer;
+  line-height: 1.2;
 }
 
 .filter-bitset-filter span:focus-visible {
